--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "4.13.0",
     "@clerk/nextjs": "4.29.9",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-checkbox": "1.0.4",
@@ -28,25 +29,32 @@
     "class-variance-authority": "0.7.0",
     "cloudinary": "^2.6.0",
     "clsx": "2.1.0",
+    "csv-writer": "^1.6.0",
     "lucide-react": "^0.479.0",
     "mongodb": "6.3.0",
     "next": "14.1.0",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-dom": "^18",
-    "stripe": "14.5.0",
+    "react-hook-form": "^7.56.1",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "xlsx": "^0.18.5",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "i": "^0.3.7",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "stripe": "14.5.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
